# apple-m1-opengl-double-precision-issue

./: CMakeLists.txt  README.md
cmake/: glew.cmake  glfw.cmake
src/: main.cpp
